--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,20 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Calculator created using create-react-app"
     />
     <link rel="stylesheet" href="style.css">
-    <title>React App</title>
+    <title>React Calculator</title>
   </head>
   <body>
 
+    <div class="credit">
+      <img width="100" height="100" src="logo.svg" alt="React Logo">
+      <p>Made With ReactJS</p>
+    </div>
+
     <div id="root"></div>
 
+    <div class="footer">ZUMTHEZAZAKING &copy;2021</div>
   </body>
 </html>
